# APC-524-MC-Showering-Simulation

./: .gitignore  .pre-commit-config.yaml  README.md  index.rst  noxfile.py  pyproject.toml
.github/workflows/: ci.yml  make_docs.yml  make_the_docs.yml
docs/source/: MC_Showering_Background.rst  conf.py  index.html  index.md  index.rst
showerclasses/: Material.py  Plots.py  Shower.py  log.txt  simulation.py
src/: Plots.py  Shower.py  log.txt  simulation.py
src/Plotting/: Plots.py
src/Shower/: Shower.py
tests/: shower_tests.py  test_shower.py
